--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,12 @@
             <artifactId>guava</artifactId>
             <version>32.0.0-android</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
